alignment fix

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -47,3 +47,8 @@
 .modal-content{
 	border:10px solid;
 }
+@media(min-width:0px) and (max-width:580px){
+	body{
+		width: 600px;
+	}
+}
